Page MenuHome GnuPG

Kleopatra: Assert in CertifyCertificateCommand after setting ownertrust of key
Closed, ResolvedPublic

Description

In CertifyCertificateCommand::Private::createJob we have observed triggering the assert:

Q_ASSERT(key().protocol() == OpenPGP);

This was reproducible by:

  • Editing a secret key with gpg --edit-key
  • set trust to unkown
  • certify another key in Kleopatra
  • Select "yes" in the question box to mark this key as your own
  • Confirm the dialog

I was able to reproduce it about 4 times but after adding some debug output I could no longer reproduce it. Now I can neiter reproduce it on Windows nor on Linux even with unchanged binaries. So it might be that this problem was there for longer but is a timing issue that we only noticed now in pre release testing.

Revisions and Commits

Event Timeline

aheinecke created this task.
ikloecker changed the task status from Open to Testing.Aug 24 2022, 2:01 PM
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker added a project: Restricted Project.
ikloecker added a subscriber: ikloecker.

Should be fixed.

I'll create a spin-off for fixing this key invalidation problem for all commands.

werner removed a project: Restricted Project.Sep 22 2022, 10:46 AM
ebo claimed this task.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ebo added a subscriber: ebo.

could not trigger it with the described steps on windows